Fix .movie-card being too large with less than 4 results

--- a/src/components/ResultSection.css
+++ b/src/components/ResultSection.css
@@ -23,6 +23,7 @@
 
 .movie-card .movie-header > .movie-poster {
   width: 40%;
+  max-width: 30vmin;
 }
 
 .movie-card .movie-header > .movie-title {
